[package]
name = "clash-butler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12.2", features = ["json", "multipart"] }
regex = "1.10.4"
md5 = "0.7.0"
urlencoding = "2.1.3"
walkdir = "2.5.0"
config = "0.14.0"
scraper = "0.19.0"
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4.37"
webbrowser = "0.8.14"