[package]
name = "clash-butler"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["proxrs", "proxrs-wasm"]

[profile.dev]
opt-level = 1 # Example setting, you can customize as needed
debug = true

[profile.release]
opt-level = "s"

[dependencies]
proxrs = { path = "proxrs" }
anyhow = "1.0.98"
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
walkdir = "2.5.0"
scraper = "0.23.1"
config = "0.15.11"
clap = { version = "4.5.40", features = ["derive"] }
futures-util = "0.3.31"
regex = "1.11.1"