[package]
name = "proxrs-wasm"
version = "0.1.0"
edition = "2021"
authors = ["ReaJason <reajason1225@gmail.com>"]
description = "A short description of my package"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.95"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.45"

[profile.release]
opt-level = "s"
