[package]
name = "proxrs"
version = "0.1.0"
edition = "2021"
authors = ["ReaJason <reajason1225@gmail.com>"]
description = "parse and format proxies between surge,clash,base64,loon,sing-box,etc."
license = "Apache-2.0"
homepage = "https://github.com/ReaJason/Clash-Butler"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9"
urlencoding = "2.1.3"
base64 = "0.22.1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
regex = "1.10"
tokio = { version = "1.0", features = ["full"] }
